# Raytracing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  main_mutithread.cpp  main_mutithread_animation.cpp
images/: image_d_gamma.ppm  image_f_gamma1.ppm
src/: AABB.hpp  AARect.hpp  BVH.hpp  Box.hpp  CMakeLists.txt  Camera.hpp  Color.hpp  General.hpp  HittableList.hpp  HittableObject.hpp  Materials.hpp  Medium.hpp  MovingSphere.hpp  Perlin.hpp  Point3.hpp  Ray.hpp  Sphere.hpp  Textures.hpp  ThreadManager.hpp  Vec3.hpp  Vector3.hpp  Vector3DF.hpp
