add_library(Vector3.hpp INTERFACE)
add_library(Point3.hpp INTERFACE)
add_library(Color.hpp INTERFACE)
add_library(Ray.hpp INTERFACE)
add_library(Vector3DF.hpp INTERFACE)
add_library(HittableObject.hpp INTERFACE)
add_library(Sphere.hpp INTERFACE)
add_library(HittableList.hpp INTERFACE)
add_library(General.hpp INTERFACE)
add_library(Camera.hpp INTERFACE)
add_library(Materials.hpp INTERFACE)
add_library(MovingSphere.hpp INTERFACE)
add_library(AABB.hpp INTERFACE)
add_library(BVH.hpp INTERFACE)
add_library(Textures.hpp INTERFACE)
add_library(Perlin.hpp INTERFACE)
add_library(AARect.hpp INTERFACE)
add_library(Box.hpp INTERFACE)
add_library(Medium.hpp INTERFACE)
